Fix spacing between tabs

--- a/src/scripts/modules/media/tabs/tabs.less
+++ b/src/scripts/modules/media/tabs/tabs.less
@@ -6,6 +6,7 @@
     ul {
         margin: 0;
         padding: 0 0 0 30px;
+        font-size: 0;
         list-style-type: none;
         color: @link-color;
         border-bottom: 2px solid white;
@@ -13,6 +14,7 @@
         li {
             display: inline-block;
             padding: 7px 10px;
+            margin-right: 3px;
             font-size: 1.5rem;
             background-color: white;
             cursor: pointer;
